--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -4,10 +4,51 @@
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  background-image: url('../../../images/avatar.jpg');
+  /* background-image: url('../../../images/avatar.jpg'); */
   background-size: cover;
   background-position: center;
+  position: relative;
   margin: 0 29px 0 0;
+}
+
+.profile__image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4); /* Затемнение */
+  opacity: 0; /* Скрываем по умолчанию */
+  transition: opacity 0.3s ease;
+}
+
+/* Показываем затемнение при наведении */
+.profile__image:hover::before {
+  opacity: 1;
+}
+
+.profile__image::after {
+  content: ""; /* Создаёт псевдоэлемент */
+  position: absolute; /* Позволяет расположить иконку внутри блока */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Центрирование */
+
+  width: 40px;
+  height: 40px;
+  
+  background: url('../../../images/edit-icon.svg') no-repeat center;
+  background-size: 60%;
+  
+  border-radius: 50%; /* Делаем иконку круглой */
+  opacity: 0; /* Скрываем иконку */
+  transition: opacity 0.3s ease; /* Плавное появление */
+}
+
+
+.profile__image:hover::after {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
