--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -8,6 +8,7 @@
   background-size: cover;
   background-position: center;
   position: relative;
+  cursor: pointer;
   margin: 0 29px 0 0;
 }
 
@@ -18,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4); /* Затемнение */
+  background: rgba(0, 0, 0, 0.7); /* Затемнение */
   opacity: 0; /* Скрываем по умолчанию */
   transition: opacity 0.3s ease;
 }
